<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.scottlogic.dmiley.battleship.activities.oneplayerversus.OnePlayerVersusEntryActivity">

    <TextView
        android:id="@+id/enter_versus_name_prompt"
        android:text="@string/enter_name_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_below="@+id/enter_versus_name_prompt"
        android:id="@+id/edit_player_versus_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLength="30"
        android:hint="@string/player_one_name"
        android:inputType="text" />

    <RadioGroup
        android:layout_below="@+id/edit_player_versus_name"
        android:id="@+id/player_versus_fleet_placement_preference"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/player_versus_fleet_placement_preference_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/want_to_place_fleet"
            android:onClick="onPlayerWantToPlaceFleetButtonClicked"/>
        <RadioButton android:id="@+id/player_versus_fleet_placement_preference_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_want_to_place_fleet"
            android:onClick="onPlayerDontWantToPlaceFleetButtonClicked"/>
    </RadioGroup>

    <Button
        android:layout_below="@+id/player_versus_fleet_placement_preference"
        android:id = "@+id/start_game_button"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/start_game_button"
        android:onClick="onStartGameButtonClicked"/>

</RelativeLayout>
