<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  tools:context="com.scottlogic.dmiley.battleship.activities.oneplayersolo.OnePlayerSoloPostGameActivity">

  <TextView
    android:id="@+id/player_congratulations"
    android:text="@string/congratulations"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

  <Button
    android:layout_below="@+id/player_congratulations"
    android:id="@+id/play_again_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/play_again_button"
    android:onClick="onPlayAgainButtonClicked"/>

  <Button
    android:layout_below="@+id/play_again_button"
    android:id="@+id/return_to_menu_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/return_to_menu_button"
    android:onClick="onReturnToMenuButtonClicked"/>

</RelativeLayout>
