<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.scottlogic.dmiley.battleship.activities.twoplayer.TwoPlayerGameActivity">

    <TextView
        android:id="@+id/ready_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/ready_fire_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/ready_fire_button"
        android:onClick="onReadyToAimButtonClicked"/>

    <com.scottlogic.dmiley.battleship.gridview.GameGridView
        android:id="@+id/twoPlayerRadarGrid"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        custom:gridForegroundColorOne = "#81b5ed"
        custom:gridForegroundColorTwo = "#81b5ed"
        custom:gridBorderColor = "#c0c0c0"
        custom:coordinateLabelForegroundColor = "#ffffff"
        custom:coordinateLabelBorderColor = "#808080"
        custom:coordinateLabelTextColor = "#000000"
        custom:gridForegroundAlternateColorOne = "#000000"
        custom:gridForegroundAlternateColorTwo = "#000000"
        custom:gridBorderAlternateColor = "#00ff00"
        custom:coordinateLabelForegroundAlternateColor = "#000000"
        custom:coordinateLabelBorderAlternateColor = "#00ff00"
        custom:coordinateLabelTextAlternateColor = "#ffffff"
        custom:textSizeModifier = "5"
        custom:defaultBorderPixelSize = "1"
        custom:validCellSelectedBorderColor = "#00ff00"
        custom:validCellSelectedBorderAlternateColor = "#ffffff"
        custom:invalidCellSelectedBorderColor = "#ff0000"
        custom:validCellSelectedForegroundColor = "#00ff00"
        custom:validCellSelectedForegroundAlternateColor = "#008080"
        custom:invalidCellSelectedForegroundColor = "#ff0000"
        custom:sunkCellFormatColor="#ffd700"
        custom:hitCellFormatColor = "#ff0000"
        custom:missCellFormatColor = "#ffffff"
        custom:missCellFormatAlternateColor = "#00ff00"
        custom:destroyerForegroundColor = "#aa65a8"
        custom:cruiserForegroundColor = "#ea937d"
        custom:submarineForegroundColor = "#8066ff"
        custom:battleshipForegroundColor = "#888888"
        custom:aircraftCarrierForegroundColor = "#347d4e"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@android:dimen/notification_large_icon_height"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/countdownTextView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/two_player_fire_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/fire_button"
            android:enabled="false"
            android:onClick="onFireButtonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/two_player_toggle_view_button"
            android:onClick="onToggleViewButtonClicked"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/two_player_continue_game_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/start_next_turn_button"
            android:onClick="onContinueGameButtonClicked"
            android:visibility="invisible"
            android:enabled="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />



    </RelativeLayout>

</LinearLayout>
